music section completed

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <header>
         <h1>Reelos</h1>
     </header>
-    <div id="video-container">
-        <!-- JavaScript will populate this section -->
-        <video controls="controls">
-            <source src="/home/abhishek/Downloads/instagram/insta2.mp4" type="video/mp4">
-        </video>
-    </div>
     <div class="buttons">
-        <button onclick="play_Prev()">Previous</button>
-        <button onclick="play_Next()">Next</button>
+        <a href="music.html">Music</a>
+        <a href="Abs.html">Abs</a>
+        <a href="Motivation.html">Motivation</a>
+        <a href="Work.html">Work</a>
+        <a href="Travel.html">Travel</a>
+        <a href="Deep.html">Deep</a>
+        <a href="Personality.html">Personality</a>
+        <a href="Manifest.html">Manifest</a>
     </div>
     <footer>
         &copy; 2023 Reelos
