created fitness page

--- a/fitness.html
+++ b/fitness.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <header>
-        <h1>Reelos - Music</h1>
-        <p id="page_id">Music</p>
+        <h1>Reelos - Fitness</h1>
+        <p id="page_id">Fitness</p>
     </header>
     <div id="video-container">
         <!-- JavaScript will populate this section -->
