--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         <h1>Reelos</h1>
     </header>
     <div class="buttons">
-        <a href="music.html">Music</a>
-        <a href="Abs.html">Abs</a>
-        <a href="Motivation.html">Motivation</a>
-        <a href="Work.html">Work</a>
-        <a href="Travel.html">Travel</a>
-        <a href="Deep.html">Deep</a>
-        <a href="Personality.html">Personality</a>
-        <a href="Manifest.html">Manifest</a>
+        <a class="menu" href="music.html">Music</a>
+        <a class="menu" href="fitness.html">Fitness</a>
+        <!-- <a class="menu" href="Motivation.html">Motivation</a>
+        <a class="menu" href="Work.html">Work</a>
+        <a class="menu" href="Travel.html">Travel</a>
+        <a class="menu" href="Deep.html">Deep</a>
+        <a class="menu" href="Personality.html">Personality</a>
+        <a class="menu" href="Manifest.html">Manifest</a> -->
     </div>
     <footer>
         &copy; 2023 Reelos
